[package]
name = "imgui-sdl2"
description = "SDL2 Input handling for imgui-rs"
version = "0.16.0"
authors = ["Michael Fairley <michael@michaelfairley.com>"]
homepage = "https://github.com/michaelfairley/rust-imgui-sdl2"
repository = "https://github.com/michaelfairley/rust-imgui-sdl2"
readme = "README.md"
categories = ["gui"]
license = "MIT/Apache-2.0"

[dependencies]
imgui = "0.12"
sdl2 = "0.38"

[dev-dependencies]
gl = "0.14"
imgui-opengl-renderer = "0.13"
